// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AfterTitle/> should display order price details from current_total_price_set if the field is presented in source.(Field should be presented in case the order was updated on Shopify.) 1`] = `
<Fragment>
  <OrderStatus
    financialStatus="pending"
    fulfillmentStatus={null}
    isCancelled={false}
  />
  <ActionButtonsGroup
    actions={
      Array [
        Object {
          "child": <React.Fragment>
            <i
              className="material-icons"
            >
              refresh
            </i>
             Refund
          </React.Fragment>,
          "key": "refund",
          "modal": [Function],
          "modalData": Object {
            "actionName": "shopifyRefundOrder",
            "order": Immutable.Map {
              "fulfillment_status": null,
              "financial_status": "pending",
              "total_price_set": Immutable.Map {
                "presentment_money": Immutable.Map {
                  "amount": 10,
                  "currency_code": "USD",
                },
              },
              "created_at": "2020-10-19T09:03:49-04:00",
              "current_total_price_set": Immutable.Map {
                "presentment_money": Immutable.Map {
                  "amount": 1,
                  "currency_code": "EUR",
                },
              },
            },
          },
          "options": Array [
            Object {
              "label": "Refund order",
              "parameters": Array [
                Object {
                  "name": "order_id",
                  "type": "hidden",
                },
                Object {
                  "name": "payload",
                  "type": "hidden",
                },
              ],
              "value": "shopifyRefundOrder",
            },
          ],
          "title": "Refund order",
        },
        Object {
          "child": <React.Fragment>
            <i
              className="material-icons"
            >
              block
            </i>
             Cancel
          </React.Fragment>,
          "key": "cancel",
          "modal": [Function],
          "modalData": Object {
            "actionName": "shopifyCancelOrder",
            "order": Immutable.Map {
              "fulfillment_status": null,
              "financial_status": "pending",
              "total_price_set": Immutable.Map {
                "presentment_money": Immutable.Map {
                  "amount": 10,
                  "currency_code": "USD",
                },
              },
              "created_at": "2020-10-19T09:03:49-04:00",
              "current_total_price_set": Immutable.Map {
                "presentment_money": Immutable.Map {
                  "amount": 1,
                  "currency_code": "EUR",
                },
              },
            },
          },
          "options": Array [
            Object {
              "label": "Cancel order",
              "parameters": Array [
                Object {
                  "name": "order_id",
                  "type": "hidden",
                },
                Object {
                  "name": "payload",
                  "type": "hidden",
                },
              ],
              "value": "shopifyCancelOrder",
            },
          ],
          "title": "Cancel order",
        },
        Object {
          "child": <React.Fragment>
            <i
              className="material-icons"
            >
              filter_none
            </i>
             Duplicate
          </React.Fragment>,
          "key": "duplicate",
          "modal": [Function],
          "modalData": Object {
            "actionName": "shopifyDuplicateOrder",
            "customer": Immutable.Map {
              "id": undefined,
              "email": undefined,
              "default_address": undefined,
              "currency": undefined,
            },
            "order": Immutable.Map {
              "fulfillment_status": null,
              "financial_status": "pending",
              "total_price_set": Immutable.Map {
                "presentment_money": Immutable.Map {
                  "amount": 10,
                  "currency_code": "USD",
                },
              },
              "created_at": "2020-10-19T09:03:49-04:00",
              "current_total_price_set": Immutable.Map {
                "presentment_money": Immutable.Map {
                  "amount": 1,
                  "currency_code": "EUR",
                },
              },
            },
          },
          "options": Array [
            Object {
              "label": "Duplicate",
              "parameters": Array [
                Object {
                  "name": "order_id",
                  "type": "hidden",
                },
                Object {
                  "name": "draft_order_id",
                  "type": "hidden",
                },
                Object {
                  "name": "payment_pending",
                  "type": "hidden",
                },
              ],
              "value": "shopifyDuplicateOrder",
            },
          ],
          "title": "Duplicate order",
        },
      ]
    }
    payload={
      Object {
        "order_id": "",
      }
    }
  />
  <CardHeaderDetails>
    <CardHeaderValue
      label="Created"
    >
      <Connect(DatetimeLabel)
        dateTime="2020-10-19T09:03:49-04:00"
        key="created-at"
      />
    </CardHeaderValue>
    <CardHeaderValue
      label="Total"
    >
      <MoneyAmount
        amount={1}
        currencyCode="EUR"
        negative={false}
        renderIfZero={false}
      />
    </CardHeaderValue>
  </CardHeaderDetails>
</Fragment>
`;

exports[`<AfterTitle/> should display order price details from total_price_set source. 1`] = `
<Fragment>
  <OrderStatus
    financialStatus="pending"
    fulfillmentStatus={null}
    isCancelled={false}
  />
  <ActionButtonsGroup
    actions={
      Array [
        Object {
          "child": <React.Fragment>
            <i
              className="material-icons"
            >
              refresh
            </i>
             Refund
          </React.Fragment>,
          "key": "refund",
          "modal": [Function],
          "modalData": Object {
            "actionName": "shopifyRefundOrder",
            "order": Immutable.Map {
              "fulfillment_status": null,
              "financial_status": "pending",
              "total_price_set": Immutable.Map {
                "presentment_money": Immutable.Map {
                  "amount": 10,
                  "currency_code": "USD",
                },
              },
              "created_at": "2020-10-19T09:03:49-04:00",
            },
          },
          "options": Array [
            Object {
              "label": "Refund order",
              "parameters": Array [
                Object {
                  "name": "order_id",
                  "type": "hidden",
                },
                Object {
                  "name": "payload",
                  "type": "hidden",
                },
              ],
              "value": "shopifyRefundOrder",
            },
          ],
          "title": "Refund order",
        },
        Object {
          "child": <React.Fragment>
            <i
              className="material-icons"
            >
              block
            </i>
             Cancel
          </React.Fragment>,
          "key": "cancel",
          "modal": [Function],
          "modalData": Object {
            "actionName": "shopifyCancelOrder",
            "order": Immutable.Map {
              "fulfillment_status": null,
              "financial_status": "pending",
              "total_price_set": Immutable.Map {
                "presentment_money": Immutable.Map {
                  "amount": 10,
                  "currency_code": "USD",
                },
              },
              "created_at": "2020-10-19T09:03:49-04:00",
            },
          },
          "options": Array [
            Object {
              "label": "Cancel order",
              "parameters": Array [
                Object {
                  "name": "order_id",
                  "type": "hidden",
                },
                Object {
                  "name": "payload",
                  "type": "hidden",
                },
              ],
              "value": "shopifyCancelOrder",
            },
          ],
          "title": "Cancel order",
        },
        Object {
          "child": <React.Fragment>
            <i
              className="material-icons"
            >
              filter_none
            </i>
             Duplicate
          </React.Fragment>,
          "key": "duplicate",
          "modal": [Function],
          "modalData": Object {
            "actionName": "shopifyDuplicateOrder",
            "customer": Immutable.Map {
              "id": undefined,
              "email": undefined,
              "default_address": undefined,
              "currency": undefined,
            },
            "order": Immutable.Map {
              "fulfillment_status": null,
              "financial_status": "pending",
              "total_price_set": Immutable.Map {
                "presentment_money": Immutable.Map {
                  "amount": 10,
                  "currency_code": "USD",
                },
              },
              "created_at": "2020-10-19T09:03:49-04:00",
            },
          },
          "options": Array [
            Object {
              "label": "Duplicate",
              "parameters": Array [
                Object {
                  "name": "order_id",
                  "type": "hidden",
                },
                Object {
                  "name": "draft_order_id",
                  "type": "hidden",
                },
                Object {
                  "name": "payment_pending",
                  "type": "hidden",
                },
              ],
              "value": "shopifyDuplicateOrder",
            },
          ],
          "title": "Duplicate order",
        },
      ]
    }
    payload={
      Object {
        "order_id": "",
      }
    }
  />
  <CardHeaderDetails>
    <CardHeaderValue
      label="Created"
    >
      <Connect(DatetimeLabel)
        dateTime="2020-10-19T09:03:49-04:00"
        key="created-at"
      />
    </CardHeaderValue>
    <CardHeaderValue
      label="Total"
    >
      <MoneyAmount
        amount={10}
        currencyCode="USD"
        negative={false}
        renderIfZero={false}
      />
    </CardHeaderValue>
  </CardHeaderDetails>
</Fragment>
`;
